Solucionado la selección de la fecha

--- a/reports/InformeVentas.jrxml
+++ b/reports/InformeVentas.jrxml
@@ -3,16 +3,18 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InformeVentas" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ccd42a03-52bb-478f-8bea-a818379cdbbd">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="TPVAdapter.xml"/>
-	<parameter name="fechaIngresada" class="java.sql.Date"/>
+	<parameter name="fechaIngresada1" class="java.lang.String"/>
+	<parameter name="fechaIngresada2" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT almacen.nombre,
 	almacen.precio,
-	proyectotpv.ventas.`ventasProductos`
+	proyectotpv.ventas.`ventasProductos`,
+	 proyectotpv.ventas.`fechaVenta` 
 FROM proyectotpv.ventas
 	INNER JOIN almacen ON 
 	 almacen.`codigoProducto` = proyectotpv.ventas.productos 
 WHERE 
-	 proyectotpv.ventas.`fechaVenta` = "2021-01-21"]]>
+	 proyectotpv.ventas.`fechaVenta` BETWEEN $P{fechaIngresada1} AND $P{fechaIngresada2}]]>
 	</queryString>
 	<field name="nombre" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.label" value="nombre"/>
@@ -28,6 +30,11 @@ WHERE
 		<property name="com.jaspersoft.studio.field.label" value="precio"/>
 		<property name="com.jaspersoft.studio.field.name" value="precio"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="almacen"/>
+	</field>
+	<field name="fechaVenta" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.tree.path" value="ventas"/>
+		<property name="com.jaspersoft.studio.field.label" value="fechaVenta"/>
+		<property name="com.jaspersoft.studio.field.name" value="fechaVenta"/>
 	</field>
 	<variable name="total" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{precio}]]></variableExpression>
@@ -54,26 +61,33 @@ WHERE
 		</band>
 	</title>
 	<pageHeader>
-		<band height="58" splitType="Stretch">
+		<band height="63" splitType="Stretch">
 			<textField>
-				<reportElement x="197" y="10" width="160" height="30" uuid="72c00b81-f374-42b9-9bd0-4ddf9f369433"/>
+				<reportElement x="80" y="16" width="190" height="30" uuid="72c00b81-f374-42b9-9bd0-4ddf9f369433"/>
 				<textElement textAlignment="Center">
 					<font size="18"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{fechaIngresada}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{fechaIngresada1}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="290" y="16" width="170" height="30" uuid="b5f38078-e5a2-4faa-a279-eb5a874045fd"/>
+				<textElement textAlignment="Center">
+					<font size="18"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{fechaIngresada2}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
 		<band height="45" splitType="Stretch">
 			<staticText>
-				<reportElement x="130" y="0" width="100" height="30" uuid="7f432511-39e7-4420-8c47-d23ef11a6981">
+				<reportElement x="20" y="0" width="100" height="30" uuid="7f432511-39e7-4420-8c47-d23ef11a6981">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="198abce1-2523-4b0c-80c2-2f815d629d2e"/>
 				</reportElement>
 				<text><![CDATA[Nombre del producto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="232" y="0" width="100" height="30" uuid="9e1785fa-7f96-4091-8497-d09adf605608">
+				<reportElement x="122" y="0" width="100" height="30" uuid="9e1785fa-7f96-4091-8497-d09adf605608">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9ce20110-61d5-45b5-9aeb-21d3e402915a"/>
 				</reportElement>
 				<text><![CDATA[Ventas del productos]]></text>
@@ -87,18 +101,24 @@ WHERE
 			<line>
 				<reportElement x="332" y="0" width="1" height="40" uuid="d2a979c2-f248-4027-9db8-527cc0748ba4"/>
 			</line>
+			<staticText>
+				<reportElement x="230" y="0" width="100" height="30" uuid="1cf80f34-48bf-4f97-bc9f-ec8c54656ff2">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bf5e3752-5def-4f41-b5a6-62e02b0477cb"/>
+				</reportElement>
+				<text><![CDATA[Fecha de venta]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="40" splitType="Stretch">
 			<textField>
-				<reportElement x="130" y="0" width="100" height="30" uuid="481f69e6-47c1-4b2c-aa1f-b32219f96c33">
+				<reportElement x="20" y="0" width="100" height="30" uuid="481f69e6-47c1-4b2c-aa1f-b32219f96c33">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="198abce1-2523-4b0c-80c2-2f815d629d2e"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="232" y="0" width="100" height="30" uuid="979401b7-dee9-46ad-b5b2-eb72f5757932">
+				<reportElement x="122" y="0" width="100" height="30" uuid="979401b7-dee9-46ad-b5b2-eb72f5757932">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9ce20110-61d5-45b5-9aeb-21d3e402915a"/>
 				</reportElement>
 				<textFieldExpression><![CDATA[$F{ventasProductos}]]></textFieldExpression>
@@ -112,6 +132,12 @@ WHERE
 			<line>
 				<reportElement x="332" y="-5" width="1" height="45" uuid="b8a63e3b-7446-4db8-befa-4f46cf8d0f08"/>
 			</line>
+			<textField>
+				<reportElement x="232" y="0" width="100" height="30" uuid="c291f2a7-ad3e-42fb-9dcd-18dff70c3e72">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="bf5e3752-5def-4f41-b5a6-62e02b0477cb"/>
+				</reportElement>
+				<textFieldExpression><![CDATA[$F{fechaVenta}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
